--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "element-china-area-data": "^4.1.2",
     "element-resize-detector": "^1.2.1",
     "element-ui": "^2.10.1",
-    "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "nprogress": "^0.2.0",
@@ -44,5 +43,23 @@
     "sass-loader": "^8.0.0",
     "svg-sprite-loader": "^4.2.1",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
