--- a/package.json
+++ b/package.json
@@ -9,40 +9,41 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@riophae/vue-treeselect": "^0.3.0",
-    "axios": "^0.19.0",
+    "@riophae/vue-treeselect": "0.4.0",
+    "axios": "^0.19.2",
     "default-passive-events": "^1.0.10",
+    "core-js": "^3.6.5",
     "e-vue-contextmenu": "^0.1.3",
     "element-china-area-data": "^4.1.2",
     "element-resize-detector": "^1.2.1",
-    "element-ui": "^2.10.1",
+    "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "nprogress": "^0.2.0",
-    "tinymce": "^5.1.5",
-    "vue": "^2.5.2",
-    "vue-cropper": "^0.4.9",
-    "vue-router": "^3.1.5",
-    "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "silly-datetime": "^0.1.2",
+    "tinymce": "^5.2.1",
+    "vue": "^2.6.11",
+    "vue-cropper": "^0.5.2",
+    "vue-router": "^3.3.2",
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "babel-eslint": "^10.0.3",
-    "compression-webpack-plugin": "^3.1.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^4.2.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -51,6 +52,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "eslint:recommended",
       "@vue/prettier"
     ],
     "parserOptions": {
@@ -60,6 +62,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ]
 }
